Adds Bootstrap btn

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@user) do |f| %>
 
 <div class="btn-group">
-  <button class="btn">Left</button>
+  <a href="#" class="btn btn-primary" >Left</a>
   <button class="btn">Middle</button>
   <button class="btn">Right</button>
 </div>
